--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/Shane325/cudanews-aggregator#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "4.16.3"
+    "express": "4.16.3",
+    "angular-socialshare": "^2.3.11"
   }
 }
